--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "set\"CI=false\" &&react-scripts build",
-    "test": "react-scripts test",
+    "build": "set \"CI=false\" && react-scripts build"
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
