--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "set \"CI=false\" && react-scripts build"
-    "eject": "react-scripts eject"
+  "start": "react-scripts start",
+  "build": "set \"CI=false\" && react-scripts build",
+  "eject": "react-scripts eject"
+},
+
   },
   "eslintConfig": {
     "extends": [
