--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.1.3",
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
+    "cross-env": "^7.0.3",
     "npm-check-updates": "^16.0.1",
     "process": "^0.11.10",
     "react": "^17.0.2",
@@ -29,11 +30,9 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-  "start": "react-scripts start",
+    "start": "react-scripts start",
   "build": "set \"CI=false\" && react-scripts build",
   "eject": "react-scripts eject"
-},
-
   },
   "eslintConfig": {
     "extends": [
